j'ai reussi a recup les enonce de soso

--- a/templates/wooclap/casterEnonce.html
+++ b/templates/wooclap/casterEnonce.html
@@ -1,27 +1,27 @@
 {% extends 'partials/base.html' %} {% block head %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
 <script>
-
-    var q=0;
+    var q = 0;
 
     const socket = io();
     socket.on('connect', function(data) {
         //socket.emit('testEQ', "Je suis dans envoyer question");
-        listeQuestions = '{{listeQuestions}}'.replaceAll('(&#39;','').replaceAll('[','').replaceAll(']','').replaceAll('&#39;,)','').replace(' ','').split(',')
-        listeReponses = '{{listeReponses}}'.replaceAll('(','').replaceAll(',)','').replaceAll(' ','').replaceAll('[','').replaceAll('],',';').replaceAll(']]','').split(';')
+        listeQuestions = '{{listeQuestions}}'.replaceAll('(&#39;', '').replaceAll('[', '').replaceAll(']', '').replaceAll('&#39;,)', '').replace(' ', '').split(',')
+        listeReponses = '{{listeReponses}}'.replaceAll('(', '').replaceAll(',)', '').replaceAll(' ', '').replaceAll('[', '').replaceAll('],', ';').replaceAll(']]', '').split(';')
         console.log(listeReponses)
-        socket.emit('oneByOne',q,listeQuestions,listeReponses);
-    });
-    
-    socket.on('emitOneByOne', function(questionCastee,reponsesAssociees){
-        $("#question").text(questionCastee);
-        console.log(questionCastee,reponsesAssociees)
+        socket.emit('oneByOne', q, listeQuestions, listeReponses);
     });
 
-    function nextQuestion(){
+    socket.on('emitOneByOne', function(questionCastee, reponsesAssociees) {
+        $("#question").text(questionCastee);
+        console.log(questionCastee, reponsesAssociees)
+        socket.emit('recupDataForRep', questionCastee, reponsesAssociees)
+    });
+
+    function nextQuestion() {
         console.log("aaaaaaa")
         q++;
-        socket.emit('oneByOne',q,listeQuestions,listeReponses);
+        socket.emit('oneByOne', q, listeQuestions, listeReponses);
     }
 </script>
 {% endblock %} {% block main %}
@@ -39,7 +39,8 @@
             </script>
             {% endfor %} -->
             <div class="affQuestion" id="question"></div>
-            <script>                                            /* Conversion de l'énoncé avec showdown */
+            <script>
+                /* Conversion de l'énoncé avec showdown */
                 $('#{{question}}').html(converter.makeHtml($('#{{question}}').text()));
             </script>
         </div>
