--- a/templates/wooclap/repondreQCM.html
+++ b/templates/wooclap/repondreQCM.html
@@ -13,23 +13,24 @@
         questions = dquestions.slice(1, dquestions.length - 1).split(", "); // (Exemple) On slice pour récupérer correctement ce qu'on veut
         reponses = dreponses.slice(1, dreponses.length - 1).split(", "); // A modifier selon ce qui faut afficher
     });
-    socket.on('afficheQuestion', (data) => { // Reception de la question à afficher
-        console.log(data) // A faire
-        $("#enonce").text(questions[data].replace(/&#39;/g,"").replace('(','').replace(')','').slice(0,-1)); // Son énoncé
-        if (reponses[data].estNumerique) { // Si c'est numérique si j'ai bien compris
-            $("#reponses").append('<p><input type="text" pattern="\d*([.]\d{0,2})?" name="reponse_num"></p>');
-        } else {
-            reponses[data].forEach((r) => { // Marche pas mais supposé afficher les réponses
-                $("#reponses").append('<p><input type="checkbox" id="{{' + r + '.idR}}" name="reponse_choix" value="{{' + r + '.idR}}" /> {{' + r + '.reponse}}</p>');
-            });
-        }
+    socket.on('afficheQuestion', (questionCastee, reponsesAssociees) => { // Reception de la question à afficher
+        console.log(questionCastee, reponsesAssociees) // A faire
+        $("#enonce").text(questionCastee.replace(/&#39;/g, "").replace('(', '').replace(')', '').slice(0, -1)); // Son énoncé
+        //if (reponses[data].estNumerique) { // Si c'est numérique si j'ai bien compris
+        //  $("#reponses").append('<p><input type="text" pattern="\d*([.]\d{0,2})?" name="reponse_num"></p>');
+        //} else {
+        //  reponses[data].forEach((r) => { // Marche pas mais supposé afficher les réponses
+        //$("#reponses").append('<p><input type="checkbox" id="{{' + r + '.idR}}" name="reponse_choix" value="{{' + r + '.idR}}" /> {{' + r + '.reponse}}</p>');
+        //});
+        //}
     });
-    function reponseE(){
+
+    function reponseE() {
 
         reponse_choix = document.getElementsByName("reponse_choix");
         reponse_num = document.getElementsByName("reponse_num");
         enonce = document.getElementsByName("enonce");
-        socket.emit('reponseE',enonce,reponse_choix,reponse_num)
+        socket.emit('reponseE', enonce, reponse_choix, reponse_num)
     };
 </script>
 {% endblock %} {% block main %}
@@ -39,7 +40,7 @@
         <div id="reponses">
 
         </div>
-        <button onclick = "reponseE">Soumettre</button>
+        <button onclick="reponseE">Soumettre</button>
     </form>
 </div>
 
