--- a/templates/wooclap/casterEnonce.html
+++ b/templates/wooclap/casterEnonce.html
@@ -4,10 +4,10 @@
 
     var q=0;
 
-    const socket = io();
-    socket.on('connect', function(data) {
+    //const socket = io();
+    //socket.on('connect', function(data) {
         //socket.emit('testEQ', "Je suis dans envoyer question");
-        listeQuestions = '{{listeQuestions}}'.replaceAll('(&#39;','').replaceAll('[','').replaceAll(']','').replaceAll('&#39;,)','').replace(' ','').split(',')
+        /*listeQuestions = '{{listeQuestions}}'.replaceAll('(&#39;','').replaceAll('[','').replaceAll(']','').replaceAll('&#39;,)','').replace(' ','').split(',')
         listeReponses = '{{listeReponses}}'.replaceAll('(','').replaceAll(',)','').replaceAll(' ','').replaceAll('[','').replaceAll('],',';').replaceAll(']]','').split(';')
         console.log(listeReponses)
         socket.emit('oneByOne',q,listeQuestions,listeReponses);
@@ -16,13 +16,14 @@
     socket.on('emitOneByOne', function(questionCastee,reponsesAssociees){
         $("#question").text(questionCastee);
         console.log(questionCastee,reponsesAssociees)
-    });
 
-    function nextQuestion(){
-        console.log("aaaaaaa")
-        q++;
-        socket.emit('oneByOne',q,listeQuestions,listeReponses);
-    }
+                //
+
+    });*/
+
+    
+        //socket.emit('oneByOne',q,listeQuestions,listeReponses);
+    
 </script>
 {% endblock %} {% block main %}
 <div class="menu">
@@ -31,17 +32,11 @@
     <div>
         <button id="Q" onclick="hideAndShow(this.id)"> Cacher/Afficher </button>
         <div id="hideDivQ">
-            <!-- {% for question in listeQuestions%}
-            <div class="affQuestion" id="{{question.idQ}}">{{question.enonce}}</div>
-            <script>
-                /* Conversion de l'énoncé avec showdown */
-                $('#{{question.idQ}}').html(converter.makeHtml($('#{{question.idQ}}').text()));
-            </script>
-            {% endfor %} -->
-            <div class="affQuestion" id="question"></div>
-            <script>                                            /* Conversion de l'énoncé avec showdown */
-                $('#{{question}}').html(converter.makeHtml($('#{{question}}').text()));
-            </script>
+            <div class="affQuestion" id="{{listeQuestions[0].idQ}}">{{listeQuestions[0].enonce}}</div>
+                <script>
+                    /* Conversion de l'énoncé avec showdown */
+                    $('#{{listeQuestions[0].idQ}}').html(converter.makeHtml($('#{{listeQuestions[0].idQ}}').text()));
+                </script>
         </div>
     </div>
 
@@ -53,4 +48,13 @@
         </div>
     </div>
 </div>
+<script>
+    function nextQuestion(){
+        console.log("aaaaaaa")
+        q++;
+        let divQuestion = document.getElementById("affQuestion").innerHTML;
+        console.log(divQuestion);
+        divQuestion.innerHTML.replace(/0/g,"1")
+    }
+</script>
 {% endblock %}
