--- a/templates/wooclap/casterEnonce.html
+++ b/templates/wooclap/casterEnonce.html
@@ -30,6 +30,7 @@
 <div class="menu">
     <h3>Code : {{idElement}}</h3>
     <button onclick="nextQuestion()">Question suivante</button>
+    <hr/>
     <div>
         <button id="Q" onclick="hideAndShow(this.id)"> Cacher/Afficher </button>
         <div id="hideDivQ">
@@ -45,7 +46,7 @@
         <button id="R" onclick="hideAndShow(this.id)"> Cacher/Afficher </button>
 
         <div id="hideDivR">
-            <p>Les Reponses à faire en socket</p>
+            <!-- <p>Les Reponses à faire en socket</p> -->
         </div>
     </div>
 </div>
