--- a/templates/wooclap/casterEnonce.html
+++ b/templates/wooclap/casterEnonce.html
@@ -2,60 +2,60 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
 <script>
     var q = 0;
-
-    var q=0;
-
-    //const socket = io();
-    //socket.on('connect', function(data) {
-        //socket.emit('testEQ', "Je suis dans envoyer question");
-        /*listeQuestions = '{{listeQuestions}}'.replaceAll('(&#39;','').replaceAll('[','').replaceAll(']','').replaceAll('&#39;,)','').replace(' ','').split(',')
+    const socket = io();
+    socket.on('connect', function(data) {
+        socket.emit('testEQ', "Je suis dans envoyer question");
+        listeQuestions = '{{listeQuestions}}'.replaceAll('Question ','').replaceAll('&#39;','').replaceAll('[','').replaceAll(']','').replaceAll('&#39;,)','').replaceAll(' ','').split(',')
         listeReponses = '{{listeReponses}}'.replaceAll('(','').replaceAll(',)','').replaceAll(' ','').replaceAll('[','').replaceAll('],',';').replaceAll(']]','').split(';')
-        console.log(listeReponses)
+        console.log(listeQuestions)
         socket.emit('oneByOne', q, listeQuestions, listeReponses);
     });
 
     socket.on('emitOneByOne', function(questionCastee, reponsesAssociees) {
         $("#question").text(questionCastee);
         console.log(questionCastee,reponsesAssociees)
+    })
 
-                //
-
-    });*/
-
-    
-        //socket.emit('oneByOne',q,listeQuestions,listeReponses);
+    function nextQuestion(){
+        q++;
+        /*let divQuestion = document.getElementById('hideDivQ');
+        console.log(divQuestion);
+        document.divQuestion.innerHTML = document.divQuestion.innerHTML.replace(/0/g,"1")
+        */
+        socket.emit('oneByOne',q,listeQuestions,listeReponses);
+    }
     
 </script>
 {% endblock %} {% block main %}
 <div class="menu">
     <h3>Code : {{idElement}}</h3>
     <button onclick="nextQuestion()">Question suivante</button>
+    <hr/>
     <div>
         <button id="Q" onclick="hideAndShow(this.id)"> Cacher/Afficher </button>
         <div id="hideDivQ">
-            <div class="affQuestion" id="{{listeQuestions[0].idQ}}">{{listeQuestions[0].enonce}}</div>
+            <!-- {% for question in listeQuestions%}
+                <div class="affQuestion" id="{{question.idQ}}">{{question.enonce}}</div>
                 <script>
                     /* Conversion de l'énoncé avec showdown */
-                    $('#{{listeQuestions[0].idQ}}').html(converter.makeHtml($('#{{listeQuestions[0].idQ}}').text()));
+                    $('#{{question.idQ}}').html(converter.makeHtml($('#{{question.idQ}}').text()));
                 </script>
+                <hr/>
+            {% endfor %} -->
+            <div class="affQuestion" id="question"></div>
+            <script>
+                /* Conversion de l'énoncé avec showdown */
+                $('#question').html(converter.makeHtml($('#question.idQ').text()));
+            </script>
         </div>
     </div>
 
-    <div>
+    <!-- <div>
         <button id="R" onclick="hideAndShow(this.id)"> Cacher/Afficher </button>
 
         <div id="hideDivR">
             <p>Les Reponses à faire en socket</p>
         </div>
-    </div>
+    </div> -->
 </div>
-<script>
-    function nextQuestion(){
-        console.log("aaaaaaa")
-        q++;
-        let divQuestion = document.getElementById("affQuestion").innerHTML;
-        console.log(divQuestion);
-        divQuestion.innerHTML.replace(/0/g,"1")
-    }
-</script>
 {% endblock %}
