--- a/templates/wooclap/casterEnonce.html
+++ b/templates/wooclap/casterEnonce.html
@@ -1,20 +1,25 @@
 {% extends 'partials/base.html' %} {% block head %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
 <script>
+    //q est le rang de la question à afficher à un moment M
     var q = 0;
     const socket = io();
     socket.on('connect', function(data) {
-        socket.emit('testEQ', "Je suis dans envoyer question");
+        //formatage des IDsreçus du serveur
         listeQuestions = '{{listeQuestions}}'.replaceAll('Question ', '').replaceAll('&#39;', '').replaceAll('[', '').replaceAll(']', '').replaceAll('&#39;,)', '').replaceAll(' ', '').split(',')
         listeReponses = '{{listeReponses}}'.replaceAll('Reponse', '').replaceAll('(', '').replaceAll(',)', '').replaceAll(' ', '').replaceAll('[', '').replaceAll('],', ';').replaceAll(']]', '').split(';')
+        //envoi au serveur des IDs formaté et du rang
         socket.emit('oneByOne', q, listeQuestions, listeReponses);
     });
 
+    //réception de la question et des réponses numéro q
     socket.on('emitOneByOne', function(questionCastee, reponsesAssociees) {
-        $("#question").text(questionCastee);
-        for (reponse of reponsesAssociees) {
+        questionCastee = questionCastee.replaceAll("[('","").replaceAll("',)]","").replaceAll("\\r\\n","<br/>")
+        $("#question").html(questionCastee)     //affichage de la question
+        for (reponse of reponsesAssociees) {    //affichage des réponses
+            reponse = reponse.replaceAll("[('","").replaceAll("',)]","")
             if (reponse == "[]"){
-                $("#reponse").append('<input type="number"><br/>')
+                $("#reponse").append('<input type="number"><br/>') //réponse numérique
             }
             else{
                 $("#reponse").append(reponse+"<br/>")
@@ -25,13 +30,11 @@
     })
 
     function nextQuestion() {
-        q++;
-        /*let divQuestion = document.getElementById('hideDivQ');
-        console.log(divQuestion);
-        document.divQuestion.innerHTML = document.divQuestion.innerHTML.replace(/0/g,"1")
-        */
-        socket.emit('oneByOne', q, listeQuestions, listeReponses);
-        document.getElementById("reponse").innerHTML = "";
+        if (q < listeQuestions.length-1){  //interdit d'incrémenter q s'il n'y a plus de questions
+            q++;
+            socket.emit('oneByOne', q, listeQuestions, listeReponses);
+            document.getElementById("reponse").innerHTML = "";
+        }
     }
 </script>
 {% endblock %} {% block main %}
@@ -44,8 +47,7 @@
         <div id="hideDivQ">
             <div class="affQuestion" id="question"></div>
             <script>
-                /* Conversion de l'énoncé avec showdown */
-                $('#question').html(converter.makeHtml($('#question.idQ').text()));
+                $('#question').html(converter.makeHtml($('#question').text()));
             </script>
         </div>
     </div>
@@ -54,6 +56,9 @@
         <button id="R" onclick="hideAndShow(this.id)"> Cacher/Afficher </button>
         <div id="hideDivR">
             <div id="reponse"></div>
+            <script>
+                $('#reponse').html(converter.makeHtml($('#reponse').text()));
+            </script>
         </div>
     </div>
 </div>
