--- a/templates/wooclap/repondreQCM.html
+++ b/templates/wooclap/repondreQCM.html
@@ -1,6 +1,8 @@
 {% extends 'partials/base.html' %} {% block head %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
 <script>
+    var ReponseAssJS;
+    var ReponseChoixJS = [];
     const socket = io(); // Variable socket
     socket.on('connect', function() { // Détection quand on arrive sur la page
         socket.emit('testRQ', "Je suis dans repondre au question");
@@ -8,26 +10,35 @@
 
     socket.on('afficheQuestion', (questionCastee, reponsesAssociees) => { // Reception de la question à afficher
         document.getElementById('reponses').innerHTML = "";
+        RA = reponsesAssociees
         $("#enonce").text(questionCastee); // Son énoncé
 
         if (reponsesAssociees == "[]") { //si numérique 
             $("#reponses").append('<p><input type="text" pattern="\d*([.]\d{0,2})?" name="reponse_num"></p>'); //ajoute un input avec la limitation 
         } else {
             reponsesAssociees.forEach((r) => { //affiche toute les reponse possible avec leur checkbox
+                ReponseChoixJS.push(r.replaceAll("[('", "").replaceAll("',)]", "") + '</p>');
                 $("#reponses").append('<p><input type="checkbox" id="' + r + '.idR" name="reponse_choix" value="' + r + '.idR" /> ' + r.replaceAll("[('", "").replaceAll("',)]", "") + '</p>');
             });
         }
     });
 
     function reponseE() {
-
-        var reponse_choix = document.getElementsByClassName("reponse_choix");
-        var reponse_num = document.getElementsByName("reponse_num");
-        var enonce = document.getElementById("enonce");
-        console.log(reponse_choix)
-        console.log(reponse_num)
+        console.log("RA = ", ReponseAssJS)
+        if (ReponseAssJS == '[]') {
+            reponse_num = document.getElementsByName('reponse_num')[0].value;
+            console.log(reponse_num)
+            socket.emit('reponseE', enonce, reponse_choix, reponse_num)
+        } else {
+            console.log("RCJS = ", ReponseChoixJS);
+            reponse_choix = document.getElementsByName("reponse_choix")[0].checked; //piste mais on devra recup des info de la socket 
+            console.log(reponse_choix)
+        }
+        reponse_div = document.getElementById('reponses').value;
+        enonce = document.getElementById('enonce').value;
+        console.log("reponse div = ", reponse_div)
         console.log(enonce)
-        socket.emit('reponseE', enonce, reponse_choix, reponse_num)
+            //socket.emit('reponseE', enonce, reponse_choix, reponse_num)
     };
 </script>
 {% endblock %} {% block main %}
