--- a/templates/ouverte/nuage.html
+++ b/templates/ouverte/nuage.html
@@ -4,9 +4,13 @@
 <script src="https://cdn.anychart.com/releases/v8/js/anychart-base.min.js"></script>
 <script src="https://cdn.anychart.com/releases/v8/js/anychart-tag-cloud.min.js"></script>
 <style>
-    html, body, #container {
-        width: 100%;
-        height: 100%;
+    #container {
+        top: 50%;
+        left:50%;
+        transform:translate(-50%,-50%);
+        position:absolute;
+        width: 40em;
+        height: 40em;
         margin: 0;
         padding: 0;
     }
