--- a/templates/liste/lQuestion.html
+++ b/templates/liste/lQuestion.html
@@ -3,6 +3,7 @@
 {% block main %}
 <div class="menu">
     <h1>Liste des questions</h1>
+    {% include 'partials/flash.html' %}
     <div class="listeQuestions">
         <table>
             <tr class="top">
