--- a/static/style.css
+++ b/static/style.css
@@ -88,7 +88,7 @@ h1 {
     border-radius: 10px;
     padding: 2em;
     width: 45em;
-    height:60vh;
+    height:70vh;
     background-color: whitesmoke;
     text-align: center;
     margin-left: 5em;
@@ -97,10 +97,21 @@ h1 {
 /* Modification dans menuNQcm */
 .menuNQcm .liste{
     font-size: 1em;
-    height: 30vh;
+    height: 20vh;
 }
 .menuNQcm .liste table{
     width: 44em;
+}
+
+.menuNQcm h1{
+    padding:0em;
+    margin: 0;
+}
+
+.generationParEtiquette{
+    height:10vh;
+    border: 1px solid black;
+    overflow-y: scroll;
 }
 
 /* Modification dans listeQCM */
