Légère modification CSS

--- a/templates/ouverte/questionOuverte.html
+++ b/templates/ouverte/questionOuverte.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block main %}
-<div class="menu">
+<div class="ouverte">
     <h1>Question Ouverte</h1>
     <h2>Répondez à cette question !</h2>
     {% if question_ouverte %}
