--- a/templates/ouverte/reponseOuverte.html
+++ b/templates/ouverte/reponseOuverte.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-<div class="menu">
+<div class="ouverte">
     <h1>Votre réponse</h1>
     <h3>(Répondez ce qui vous passe par la tête...)</h3>
     <hr/>
