--- a/static/style.css
+++ b/static/style.css
@@ -470,6 +470,20 @@ fieldset {
     font-style: italic;
 }
 
+.ouverte {
+    border: 0.5em solid black;
+    border-radius: 10px;
+    padding: 2em;
+    position: absolute;
+    opacity: 0.9;
+    top: 50%;
+    left: 50%;
+    font-size: 1em;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    background-color: whitesmoke;
+}
+
 /* test
 
 label {
@@ -767,7 +781,7 @@ input:invalid {
     }
     .menuNQcm{
         margin:0;
-        height:55vh;
+        height:75vh;
         width:70vw;
         font-size: 0.75em;
     }
@@ -801,6 +815,10 @@ input:invalid {
     }
     .listeCaster table{
         width: 65vw;
+    }
+    .ouverte{
+        font-size: 0.8em;
+        width: 75vw;
     }
 }
 /* ------------------------------------------------------------------------ */
