--- a/templates/statistiques.html
+++ b/templates/statistiques.html
@@ -18,14 +18,12 @@
                     <td>Séquence</td>               <!-- Pourcentage de questions bien répondus -->
                 </tr>
                 <!-- un for ici -->
-                {% for reponse in Reponses %}
-                    <tr>
-                        <td>{{reponse.date}}</td>
-                        <td>{{reponse.numeroEtu}}</td>
-                        <td>{{reponse.Value}}</td>      <!-- if question seule then id question + reussi/raté else vide -->
-                        <td>-</td>                      <!-- if séquence then id séquence + pourcentage question réussi else vide -->
-                    </tr>
-                {% endfor %}
+                <tr>
+                    <td>22/02/2023</td>
+                    <td>Robert</td>
+                    <td>-</td>      <!-- if question seule then id question + reussi/raté else vide -->
+                    <td>-</td>                      <!-- if séquence then id séquence + pourcentage question réussi else vide -->
+                </tr>
                 <!-- effacer les réponses des étudiants ? -->
             </table>
         </div>
