readme, légère modification HTML

--- a/templates/wooclap/envoyerEnonce.html
+++ b/templates/wooclap/envoyerEnonce.html
@@ -25,12 +25,12 @@
         </form>
     </div>
     <div class="caster">
-        <h1>Caster une QCM</h1>  
+        <h1>Caster une séquence</h1>  
         <form action="/envoyerEnonce" method="POST">
             <div class="listeCaster">  
                 <table>
                     <tr class="top">
-                        <td>QCM</td>
+                        <td>Questionnaire</td>
                     </tr>
                     {% for qcm in listeQCM %}
                     <tr>
