--- a/templates/liste/lQCM.html
+++ b/templates/liste/lQCM.html
@@ -3,7 +3,7 @@
 {% block main %}
 <div class="mid double">
     <div class="menuLQcm">   <!-- Partie liste de QCM -->
-        <h1>Liste des QCM</h1>
+        <h1>Liste des Questionnaires</h1>
         {% include 'partials/flash.html' %}
         <div class="listeQCM">
             <table>
@@ -28,8 +28,8 @@
     </div>
     <div class="menuNQcm">   <!-- Partie nouveau QCM -->
         <form action="/listeQCM" method="POST">  <!-- Ce formulaire permet d'afficher la liste des question -->
-            <h1>Nouveau QCM</h1>
-            <p>Donnez un titre à votre QCM : <input type="text" name="nomQcm" placeholder="Titre" /></p>
+            <h1>Nouveau Questionnaire</h1>
+            <p>Donnez un nom à votre questionnaire : <input style="width:149.3px" type="text" name="nomQcm" placeholder="Nom" /></p>
             <div class="liste">
                 <table>
                     <tr class="top">
@@ -50,8 +50,8 @@
         </form>
         <form action="/createRandom" method="POST">
             <h1>Nouveau Controle</h1>
-            <input type="number" name="num_qcm" min="1" placeholder="Nombre de contrôles" required>
-            <input type="text" name="nom_qcm" placeholder="Nom des contrôles" required><br><br>
+            <p>Nombre de contrôles souhaités : <input style="width:49.3px" type="number" name="num_qcm" min="1" placeholder="0" required></p>
+            <p>Nom des contrôles : <input style="width:149.3px" type="text" name="nom_qcm" placeholder="Nom" required></p>
             <fieldset><legend>Choisir étiquettes</legend>
                 <ul style="list-style-type: none;">
                     {% for etiquette in etiquettes %}
