--- a/templates/liste/lQCM.html
+++ b/templates/liste/lQCM.html
@@ -55,10 +55,10 @@
             <fieldset><legend>Choisir étiquettes</legend>
                 <ul style="list-style-type: none;">
                     {% for etiquette in etiquettes %}
-                    <li style="float: left;width: 25%;"><label>{{ etiquette.nom }}</label>
+                    <li style="float: left;width: 33%;"><label>{{ etiquette.nom }}</label>
                         <input type="hidden" name="etiquette_id[]" value="{{ etiquette.idE }}">
-                        <input style="width:49.3px" type="number" name="nb_questions_min[{{etiquette.idE}}]" value="0" min="0" max="{{ etiquette.questions }}" required>
-                        <input style="width:49.3px" type="number" name="nb_questions_max[{{etiquette.idE}}]" value="0" min="0" max="{{ etiquette.questions }}" required>
+                        <input style="width:3em" type="number" name="nb_questions_min[{{etiquette.idE}}]" value="0" min="0" max="{{ etiquette.questions }}" required>
+                        <input style="width:3em" type="number" name="nb_questions_max[{{etiquette.idE}}]" value="0" min="0" max="{{ etiquette.questions }}" required>
                         </li>  
                     {% endfor %}
                 </ul>
